--- a/Home/home.html
+++ b/Home/home.html
@@ -64,6 +64,7 @@
         </div>
       </nav>
     </header>
-    <main><h1>Aka beshti oli</h1></main>
+    <main><h1>Aka beshti oli</h1>
+    <h2>men erkakma</h2></main>
   </body>
 </html>
